# pro-intern-1

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  story_generator.py
backend/db/: database.py
backend/models/: story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
frontend/: .env.example  .gitignore  vite.config.js
frontend/src/: App.css  main.jsx
frontend/src/components/: StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx
